# post-it

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: checks.yml  release.yml
docs/: README.md
postit/: cli.py  deduper.py  documents.py  files.py  main.py  mixer.py  processor.py  registry.py  tagging.py  types.py  utils.py
postit/examples/: news.py
postit/taggers/: dedupe.py  length.py
postit/taggers/code/: comments.py
tests/: test_documents.py  test_files.py  test_registry.py  test_types.py
tests/taggers/: test_length.py
tests/taggers/code/: test_comments.py
tidy/: documents.py
