[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "postit"
version = "0.0.1"
description = "A flexible Python data tagging framework for pre-training of AI models."
readme = "README.md"
authors = [
  { name="Brennen Ho", email="post-it@brennen.dev" },
]

[project.urls]
Homepage = "https://github.com/brennenho/post-it"
Issues = "https://github.com/brennenho/post-it/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-between-types = 1
no-sections = true